sandbox/output
StringCalculatorTest.java:36: error: cannot find symbol
            assertEquals("Format error", e.message());
                                          ^
  symbol:   method message()
  location: variable e of type Exception
1 error
